Fixing alignment for mobile phone viewing of site.

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@
 }
 
 @media screen and (max-width: 800px) {
-  .main-heading, .carousel, .carousel-inner, .carousel-caption {
-    font-size: 2px;
+  .main-heading, .carousel, .carousel-inner, .carousel-caption, .portrait {
     align-items: left;
     justify-content: center;
   }
